[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data loading program"
authors = ["Your Name <yoelboud>"]
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1"
numpy = "^1.26"
matplotlib = "^3.7"
requests = "^2.31"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"