[tool.poetry]
name = "ex1"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["Roy-ALPHA <boudaliyounss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
